--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 body {
-    background-color: rgb(255, 255, 165);
+    background-color: rgb(243, 144, 62);
+    display:flex;
+    flex-direction:column;
+    align-items:center;
 }
 
 .image{
-    border: 5px solid green;
+    border: 5px solid rgb(207, 207, 207);
     border-radius: 10px;
     height: 400px;
 }
@@ -16,4 +19,9 @@ body {
     padding: 5px;
     border-radius: 5px;
     box-shadow: 2px 3px #888888;
+}
+
+p.description{
+    max-width:952px;
+    text-align:justify;
 }
