--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,19 @@ body {
     height: 400px;
 }
 
+h1{
+     display: block;
+    margin: auto;
+    text-align: center;
+}
+
+
 .link-button {
+    display: block;
+    margin: auto;
+    text-align: center;
+    max-width: 6%;
+    max-height: 6%;
     text-decoration: none;
     color: black;
     border: 1px solid gray;
@@ -16,4 +28,12 @@ body {
     padding: 5px;
     border-radius: 5px;
     box-shadow: 2px 3px #888888;
+}
+a{
+    display: block;
+    padding: 50px;
+    text-align: center;
+    color: rgb(52, 120, 179);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bolder;
 }
